# cdec

environment/: LocalConfig.pm
training/mira/: Makefile.am  kbest_cut_mira.cc  kbest_cut_rmm.cc  run_mira.pl  run_rmm.pl
utils/: fast_sparse_vector.h
